networking/cert-manager/allow-in-namespace.yaml
#apiVersion: projectcalico.org/v3
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-in-namespace
  namespace: cert-manager
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  selector: all()
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    source:
      selector: all()
  egress:
  - action: Allow
    destination:
      selector: all()
